# ESP32-S3-BOX

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.oldold
components/my_board/my_board_v1_0/: board_def.h  board_pins_config.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: desktop_app.c  desktop_app.h  music_app.c  music_app.h  radio_app.c  radio_app.h
main/config/: events.h  system_config.h
main/hal/: it7259_hal.c  it7259_hal.h  keys_hal.c  keys_hal.h  led_hal.c  led_hal.h  lvgl_hal.c  lvgl_hal.h  myboard_hal.c  myboard_hal.h  power_hal.c  power_hal.h  power_io_hal.c  power_io_hal.h  sd_hal.c  sd_hal.h  tca9535_hal.c  tca9535_hal.h  wifi_hal.c  wifi_hal.h
main/icon/: icon_clock.c  icon_deepseek.c  icon_folder.c  icon_light.c  icon_music.c  icon_next_40.c  icon_play_40.c  icon_prev_40.c  icon_radio.c  icon_record.c  icon_reflash_28.c  icon_setting.c  icon_stop_40.c  icon_tomato.c  icon_usb.c  icon_weather.c  icon_wifioff_15.c  icon_wifion_15.c
main/services/: audio_service.c  audio_service.h  event_loop_service.c  event_loop_service.h  key_input_service.h  led_service.c  led_service.h  power_service.c  power_service.h  sntp_service.c  sntp_service.h  system_event.h  ui_service.c  ui_service.h  wifi_event_data.h  wifi_service.c  wifi_service.h
